css/style.css
/* VARIABLES */
/* BASE */
html,
body {
  font-family: Constantia, Lucida Bright, DejaVu Serif, Georgia, serif;
  font-size: 1em;
  line-height: 1.4;
  height: 100%;
  margin: 0;
  padding: 0;
  background-color: #FFF;
  color: #000;
}

p {
	font-size: 1em;
	text-align: left;
	line-height: 1.55;
	padding: 0;
	width: 80%;
	max-width: 910px;
	margin: 0 auto 1.15rem;
}

p a {
	text-decoration: none;
}
p img {
	width: 20vw;
	max-width: 100%;
	height: auto;
}

.news-feature__image {
	float: left;
	width: min(38vw, 360px);
	margin: 0.25rem 1.2rem 0.75rem 0;
	box-shadow: 0 4px 14px rgba(0, 0, 0, 0.18);
}

.mission-summary__image {
	float: left;
	width: min(42vw, 430px);
	margin: 0.25rem 1.25rem 0.75rem 0;
}

.bazaar-definition {
	box-sizing: border-box;
	width: 80%;
	max-width: 910px;
	margin: 2.25rem auto 1.5rem;
	padding: 1.35rem 1.5rem;
	background: #f5f2ec;
	border-top: 4px solid #d8d0c3;
}

.bazaar-definition h2,
.bazaar-definition p {
	width: 100%;
	max-width: none;
	margin-left: 0;
	margin-right: 0;
}

.bazaar-definition h2 {
	margin-top: 0;
}

.bazaar-definition p {
	margin-bottom: 0;
}

a {
  text-decoration: underline;
  color: #06C;
}

.container {
  overflow: hidden;
  *zoom: 1;
  margin: 0;
  padding:0px;
}

.site-content {
  padding-top: 100px;
  top: 100px;
  background-image:url( ../images/ribbon-red.gif);
  background-position:top left;
  background-size:contain;
  background-repeat:no-repeat;
}

.site-content .container > center > div {
	box-sizing: border-box;
	width: 90%;
	max-width: 1100px !important;
	margin: 0 auto;
	padding: 26px 0 42px !important;
	text-align: left;
}

.body__logo {
	display: block;
	text-align: left;
	margin: 0;
}

.body__logo + br {
	display: none;
}

.body__logo img {
	width: 45vw !important;
	max-width: 450px !important;
	margin: 0 !important;
	padding: 0 !important;
	height: auto;
}

.two-col-page {
	-webkit-column-count: 2;  -webkit-column-gap: 15px;
    -moz-column-count: 2;     -moz-column-gap: 15px;
    column-count: 2;          column-gap: 15px;
	box-sizing: border-box;
	width: 90%;
	max-width: 1100px;
	margin: 0 auto;
	text-align: left;
}

.two-col-page p {
	width: 100%;
	max-width: none;
}

.two-col-page h2 {
	width: 100%;
	max-width: none;
	margin-left: 0;
	margin-right: 0;
}

.two-col-page h1 {
	width: 100%;
	max-width: none;
	margin-left: 0;
	margin-right: 0;
}

.two-col-page ul {
	margin-top: 0;
	padding-left: 1.4rem;
}

.two-col-page li {
	margin-bottom: 1.25rem;
	line-height: 1.45;
}

.image-gallery p {
	width: 100%;
	max-width: none;
	margin: 0;
}

.footer-pre-logo {
	display: block;
	margin: 18px 0 0 auto !important;
}

.two-col-page ul {
	-webkit-column-break-inside: avoid;
    page-break-inside: avoid;
    break-inside: avoid; 
}

.faq li:nth-child(even) {
	font-weight:700;
	color:#06c;
	font-size:1.2em;
}
.faq li:nth-child(odd) {
	font-style:oblique;
	margin-bottom:5px;
	padding-bottom:5px;
	border-bottom:#CCC 1px solid;
}
h1 {
	font-family: 'Lobster', cursive;
	color: #C20014;
	width: 80%;
	max-width: 910px;
	margin: 2.2rem auto 0.9rem;
	text-align: left;
	font-size: 2.3em;
	font-weight: 400;
	line-height: 1.1;
	text-shadow: 1px 1px 0 #fff;
}

h1.page-title {
	position: relative;
	z-index: 0;
	isolation: isolate;
	display: flex;
	align-items: center;
	justify-content: center;
	box-sizing: border-box;
	min-height: 84px;
	padding: 10px 84px;
	color: #fff;
	width: 80%;
	max-width: 910px;
	text-align: center;
	text-shadow: 2px 2px 0 rgba(0, 0, 0, 0.35);
}

h1.page-title::before,
h1.page-title::after {
	content: '';
	position: absolute;
	top: 0;
	bottom: 0;
	width: 58%;
	background-color: #C20014;
	z-index: -1;
	filter: drop-shadow(0 3px 0 rgba(143, 0, 16, 0.45));
}

h1.page-title::before {
	left: 0;
	clip-path: polygon(0 0, calc(100% - 44px) 0, 100% 50%, calc(100% - 44px) 100%, 0 100%, 44px 50%);
}

h1.page-title::after {
	right: 0;
	clip-path: polygon(0 50%, 44px 0, 100% 0, calc(100% - 44px) 50%, 100% 100%, 44px 100%);
}
h2 {
	font-family: 'Lobster', cursive;
	color: #000;
	width: 80%;
	max-width: 910px;
	margin: 1.65rem auto 0.55rem;
	text-align: left;
	font-size: 1.75em;
	font-weight: 400;
	line-height: 1.15;
}
h2 a {
	text-decoration: none;
	color: #000;
}

hr {
	width: 80%;
	max-width: 910px;
	margin: 1.4rem auto;
	border: 0;
	border-top: 1px solid rgba(0, 0, 0, 0.16);
}

.blueBox {
	background: #06C;
	width:40%;
	max-width:380px;
	min-width:275px;
	font-family: 'Lobster', cursive;
	font-weight:700;
	color:#FFF;
	font-size:1.5em;
	border-radius:.5em;
	padding:10px;
	text-align:center;
}
.blueBox a {
	color:#FFF;
	text-decoration:none;
}
.footer {
	color: #000;
	font-family: Constantia, Lucida Bright, DejaVu Serif, Georgia, serif;
	border-top:1px #06C solid;
	padding:25px;
	margin-top:10px;
	background-color: #C0C0C0;
	width:100%;
	box-sizing: border-box;
	z-index:100;
	-webkit-column-count: 2;  -webkit-column-gap: 15px;
    -moz-column-count: 2;     -moz-column-gap: 15px;
    column-count: 2;          column-gap: 15px;
}
.footer a {
	color: #C20014;
}
.footer__logo {
	-webkit-column-span: all;
	column-span: all;
	text-align: left;
	margin: 0 0 20px;
}
.footer__logo img {
	width: 80vw;
	max-width: 520px;
	height: auto;
}
.footer li {
	-webkit-column-break-inside: avoid;
    page-break-inside: avoid;
    break-inside: avoid;  
}

.footer p {
	color: #000;
	text-shadow: 0 0 ;
	width: auto;
	max-width: 450px;
	font-size: 11px;
	padding-right: 15px;
}

/* HEADER */
.header {
  font-family: 'Lobster', cursive;
  font-size:1.1em;
  position: fixed;
  left: 0;
  right: 0;
  height: 75px;
  line-height: 75px;
  color: #fff;
  background-color: #555555;
  border-bottom:2px #FFF solid;
  z-index: 1;
}

.header__title {
	display:none;
}

.mobile-site-title {
	display:none;
}

/*
.header__logo {
  padding: 10px 5px 5px 5px;
  float: left;
  width:150px;
  z-index:100;
}
*/

.body__logo {
	display: block;
}

/* MENU */
.menu {
  float: left;
}
.menu a {
  padding: 0 15px;
  color:inherit;
  text-decoration:none;
}
/* ... */

